[package]
name = "leadership_elections"
version = "0.1.0"
authors = ["David Timm <dtimm@vmware.com>"]
edition = "2018"

[dependencies]
atomic = "0.5"
hyper = "0.13"
http = "0.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = "3.0.0-beta.2"

[dev-dependencies]
tokio-test = "*"
